completed foundation website

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,12 +180,12 @@
           <div class="text-sm text-ffuf-black font-medium">Enduring Legacy. Enriching Lives. <span class="material-icons text-ffuf-purple">location_on</span> Abuja, Nigeria</div>
         </div>
         <div class="flex items-center gap-4">
-          <a href="https://www.instagram.com/umenyifoundation/" aria-label="Instagram" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose">Instagram</a>
-          <a href="https://www.facebook.com/umenyifoundation" aria-label="Facebook" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose">Facebook</a>
-          <a href="https://x.com/umenyifoundatn" aria-label="Twitter" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose">X (Formerly Twitter)</a>
+          <a href="https://www.instagram.com/umenyifoundation/" aria-label="Instagram" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose"> <i class="fa-brands fa-instagram text-sm"></i></a>
+          <a href="https://www.facebook.com/umenyifoundation" aria-label="Facebook" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose"><i class="fa-brands fa-facebook text-sm"></i></a>
+          <a href="https://x.com/umenyifoundatn" aria-label="Twitter" class="text-sm text-ffuf-purple font-medium hover:text-ffuf-rose"><i class="fa-brands fa-x-twitter text-sm"></i></a>
         </div>
       </div>
-      <!-- <div class="mt-6 text-xs font-medium text-ffuf-purple border-t-[1px] border-ffuf-rose"><a href="https://www.linkedin.com/in/ayodeji-adebola-profile/">Powered by Carter</a></div> -->
+      <div class="mt-6 text-xs font-medium text-ffuf-purple border-t-[1px] border-ffuf-rose"><a href="mailto:info@ffufoundation.org">info&commat;ffufoundation.org</a></div>
     </div>
   </footer>
 </div>
